--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   </div>
   <div>
     <p></p>
-    回答欄の牌姿で出題IDを作成:　
+    回答欄の牌姿で出題IDを作成(和了牌は右端):　
     <select id="createbahuu">
       <option value="東">東</option>
       <option value="南">南</option>
