--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1 user-scalable=yes">
+  <meta name="google-site-verification" content="kACBtML6EaHyKW9N6B4IlDCc5nxXVabEOCkfU06pl-c" />
 
   <title>無限麻雀ハンドル</title>
   
