--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1 user-scalable=yes">
   <meta name="google-site-verification" content="kACBtML6EaHyKW9N6B4IlDCc5nxXVabEOCkfU06pl-c" />
+  <meta name=”description” content=”mahjong handleのランダム出題と作問。” />
 
   <title>無限麻雀ハンドル</title>
   
